# kata_bank_fastapi

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: settings.py
app/modules/account/: account.py  exceptions.py  extract.py  mapper.py  models.py  repository.py  rule.py  schema.py  service.py  view.py
app/shared/: dependencies.py  handler_exception.py  routes.py
migrations/: env.py
migrations/versions/: a2b278933511_create_account_and_extract_tables.py  fa92965b22e7_create_account_and_extract_tables.py
